--- a/.github/workflows/continuous-build.yml
+++ b/.github/workflows/continuous-build.yml
@@ -6,25 +6,12 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  workflow_call
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  build_and_run:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup apptainer
-        uses: eWaterCycle/setup-apptainer@v2.0.0
-        
-      - name: build containers
-        run: make bld/containers/{3.6,4.0,4.2.0}/apptainer-nemo.sif
-
-      - name: run nemo and create test data
-        run: make all
-
-        
   build:
     name: build-${{ matrix.version }}
     runs-on: ubuntu-latest
@@ -35,6 +22,27 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup apptainer
         uses: eWaterCycle/setup-apptainer@v2.0.0
-        
       - name: build containers
         run: make bld/containers/${{ matrix.version }}/apptainer-nemo.sif
+      - uses: actions/cache@v3
+        with:
+          path: bld/containers/${{ matrix.version }}/apptainer-nemo.sif
+          key: build-${{ matrix.version }}-${{ hashFiles(bld/containers/${{ matrix.version }}/apptainer-nemo.sif) }}
+  
+  run:
+    needs: build-${{ matrix.version }}
+    name: run-${{ matrix.version }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: ["3.6", "4.0", "4.2.0"]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup apptainer
+        uses: eWaterCycle/setup-apptainer@v2.0.0
+      - uses: actions/cache@v3
+        with:
+          path: bld/containers/${{ matrix.version }}/apptainer-nemo.sif
+          key: build-${{ matrix.version }}-${{ hashFiles(bld/containers/${{ matrix.version }}/apptainer-nemo.sif) }}
+      - name: run nemo and create test data
+        run: make all/${{ matrix.version }}
