--- a/.github/workflows/continuous-build.yml
+++ b/.github/workflows/continuous-build.yml
@@ -15,8 +15,6 @@ jobs:
   build:
     name: build-${{ matrix.version }}
     runs-on: ubuntu-latest
-    env:
-      v: ${{ matrix.version }}
     strategy:
       matrix:
         version: ["3.6", "4.0", "4.2.0"]
@@ -29,7 +27,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: bld/containers/${{ matrix.version }}/apptainer-nemo.sif
-          key: build-$v-${{ hashFiles(bld/containers/$v/apptainer-nemo.sif) }}
+          key: build-${{ matrix.version }}-${{ hashFiles(bld/containers/*/apptainer-nemo.sif) }}
   
   run:
     needs: build-${{ matrix.version }}
@@ -45,6 +43,6 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: bld/containers/${{ matrix.version }}/apptainer-nemo.sif
-          key: build-${{ matrix.version }}-${{ hashFiles(bld/containers/${{ matrix.version }}/apptainer-nemo.sif) }}
+          key: build-${{ matrix.version }}-${{ hashFiles(bld/containers/*/apptainer-nemo.sif) }}
       - name: run nemo and create test data
         run: make all/${{ matrix.version }}
