--- a/.github/workflows/continuous-build.yml
+++ b/.github/workflows/continuous-build.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: bld/containers/${{ matrix.version }}/apptainer-nemo.sif
-          key: build-${{ matrix.version }}-${{ hashFiles(bld/containers/*/apptainer-nemo.sif) }}
+          key: build-${{ hashFiles(bld/containers/*/apptainer-nemo.sif) }}
   
   run:
     needs: build-${{ matrix.version }}
